--- a/step02_PandasReview_s.ipynb
+++ b/step02_PandasReview_s.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "<[step01 pandasBasic학습](step01_pandasBasic.ipynb)>  |  <[step03 pivotTable학습](step03_pivotTable.ipynb) >"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
