--- a/step03_pivotTable.ipynb
+++ b/step03_pivotTable.ipynb
@@ -4,8 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "<[step02 PandasReview학습](step02_PandasReview.ipynb)>  |  <[step04 NumpyBasic학습](step04_NumpyBasic.ipynb) >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 피벗 Table\n",
-    "\n",
     "1. 피벗? 회전하는 물체의 균형을 잡아주는 중심점 ( 원의 중심점과 흡사)\n",
     "2. 피벗 테이블? 여러 table중에서 자신이 원하는 데이터만으로 원하는 행과 열에 데이터를 재배치하여 새로운 데이터를 구조화\n",
     "3. API소개\n",
