--- a/step01_pandasBasic.ipynb
+++ b/step01_pandasBasic.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "<[step02 pandasBasic학습](step03_pivotTable.ipynb)>  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pandas 학습"
    ]
   },
