--- a/step18_EDA.ipynb
+++ b/step18_EDA.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "source": [
     "**mem_data.csv 고객정보데이터**\n",
+    "\n",
     "- 'MEM_ID' : 회원코드\n",
     "- 'M_STORE_ID' : 가맹점 코드\n",
     "- 'GENDER' :남(M), 여(F) \n",
@@ -65,7 +66,25 @@
     "- 'USED_PNT' : 사용포인트 합계\n",
     "- 'ACC_PNT' : 누적포인트 합계\n",
     "- 'USABLE_INIT' : 초기 포인트\n",
-    "- 'SMS' : SNS 수신동의"
+    "- 'SMS' : SNS 수신동의\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "**mem_transaction.csv**\n",
+    "\n",
+    "- 'STORE_ID' : 판매매장 코드\n",
+    "- 'SELL_DT' : 판매일자\n",
+    "- 'MEMP_STY' : 주문 시 생성(O), 추후 적립(M), 웹입력(W)\n",
+    "- 'MEM_ID' : 회원코드\n",
+    "- 'MEMP_DT' : 판매 금액\n",
+    "- 'SELL_AMT' : 판매금액\n",
+    "- 'MEMP_TP' : A-적립, U:사용, R:조회\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "**store_info.csv**\n",
+    "- STORE_CD : 판매점코드\n",
+    "- STORE_REGION : 판매점 지역"
    ]
   },
   {
@@ -247,49 +266,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mem_data = pd.read_csv('0.dataSet/mem_data.csv')\n",
+    "mem_tr = pd.read_csv('0.dataSet/mem_transaction.csv')\n",
+    "store_info = pd.read_csv('0.dataSet/store_info.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7534 entries, 0 to 7533\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   MEM_ID       7534 non-null   int64  \n",
-      " 1   M_STORE_ID   7534 non-null   int64  \n",
-      " 2   GENDER       7534 non-null   object \n",
-      " 3   BIRTH_DT     4193 non-null   object \n",
-      " 4   BIRTH_SL     7534 non-null   object \n",
-      " 5   ZIP_CD       7534 non-null   object \n",
-      " 6   RGST_DT      7534 non-null   object \n",
-      " 7   VISIT_CNT    7534 non-null   float64\n",
-      " 8   SALES_AMT    7534 non-null   float64\n",
-      " 9   LAST_VST_DT  7534 non-null   object \n",
-      " 10  USABLE_PNT   7534 non-null   float64\n",
-      " 11  USED_PNT     7534 non-null   float64\n",
-      " 12  ACC_PNT      7534 non-null   float64\n",
-      " 13  USABLE_INIT  7534 non-null   float64\n",
-      " 14  SMS          7534 non-null   object \n",
-      "dtypes: float64(6), int64(2), object(7)\n",
-      "memory usage: 883.0+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "mem_data = pd.read_csv('0.dataSet/mem_data.csv')\n",
-    "mem_data.info()"
-   ]
   },
   {
    "cell_type": "code",
@@ -316,10 +307,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60049 entries, 0 to 60048\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   STORE_ID  60049 non-null  int64 \n",
+      " 1   SELL_DT   60049 non-null  int64 \n",
+      " 2   MEMP_STY  60049 non-null  object\n",
+      " 3   MEM_ID    60049 non-null  int64 \n",
+      " 4   MEMP_DT   60049 non-null  object\n",
+      " 5   SELL_AMT  60049 non-null  int64 \n",
+      " 6   MEMP_TP   60049 non-null  object\n",
+      "dtypes: int64(4), object(3)\n",
+      "memory usage: 3.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mem_transaction = pd.read_csv('0.dataSet/mem_transaction.csv')\n",
+    "mem_transaction.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['STORE_ID', 'SELL_DT', 'MEMP_STY', 'MEM_ID', 'MEMP_DT', 'SELL_AMT',\n",
+       "       'MEMP_TP'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mem_transaction.columns"
+   ]
   },
   {
    "cell_type": "code",
